(GH-113) fix spacing for list items in check list

--- a/chocolatey/Website/Content/chocolatey.css
+++ b/chocolatey/Website/Content/chocolatey.css
@@ -28,10 +28,10 @@
     /*font-weight: 600;*/
 }
 
-.review-instructions li {
+/*.review-instructions li {
     position: relative;
     left: 20px;
-}
+}*/
 
 .review-instructions textarea {
     width: 500px;
